common_base_util: 新增 ViewPager common_base_ui  : 新增 AccessbilityExt.kt扩展类与demo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">common_utils</string>
+    <string name="accessibility_description">跳过开屏广告</string>
 </resources>
