common_base_util: 新增ViewPage2的扩展，可动态添加删除Fragment,支持绑定View(暂不支持动态添加删除View) common_base_ui  :

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">common_utils</string>
+    <string name="app_name_new">雪山飞胡</string>
     <string name="accessibility_description">跳过开屏广告</string>
 </resources>
